syntax = "proto3";

package graphql.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/enterprise/options/graphql/v1beta1";

option java_package = "io.envoyproxy.envoy.config.filter.http.graphql.v2";
option java_outer_classname = "GraphQLFilterProto";
option java_multiple_files = true;

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";


// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message RequestTemplate {
  reserved 1, 2, 3;
  reserved "headers", "query_params", "body";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message ResponseTemplate {
  reserved 1, 2;
  reserved "result_root", "setters";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message GrpcRequestTemplate {
  reserved 1, 2, 3, 4;
  reserved "outgoing_message_json", "service_name", "method_name", "request_metadata";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message RESTResolver {
  reserved 1, 2, 3, 4, 5;
  reserved "upstream_ref", "request", "response", "span_name", "timeout";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message GrpcDescriptorRegistry {
  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message ProtoRefs {
    reserved 1;
    reserved "config_map_refs";
  }
  reserved 1, 2, 3;
  reserved "proto_descriptor", "proto_descriptor_bin", "proto_refs_list";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message GrpcResolver {
  reserved 1, 2, 3, 4, 5;
  reserved "upstream_ref", "request_transform", "span_name", "timeout";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message StitchedSchema {

  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message SubschemaConfig {
    // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
    message TypeMergeConfig {
      reserved 1, 2, 3;
      reserved "selection_set", "query_name", "args";
    }
    reserved 1, 2, 3;
    reserved "name", "namespace", "type_merge";
  }

  reserved 1;
  reserved "subschemas";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message MockResolver {
  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message AsyncResponse {
    reserved 1, 2;
    reserved "response", "delay";
  }
  reserved 1, 2, 3;
  reserved "sync_response", "async_response", "error_response";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message Resolution {
  reserved 1, 2, 3, 4;
  reserved "rest_resolver", "grpc_resolver", "stat_prefix", "mock_resolver";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message GraphQLApi {

  option (core.solo.io.resource).short_name = "gql";
  option (core.solo.io.resource).plural_name = "graphql_apis";

  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message GraphQLApiOptions {
    reserved 1;
    reserved "log_sensitive_info";
  }

  reserved 1, 2, 3, 4, 5, 6, 7, 8;
  reserved "namespaced_statuses", "metadata", "stat_prefix", "persisted_query_cache_config", "allowed_query_hashes", "executable_schema", "stitched_schema", "options";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message PersistedQueryCacheConfig {
  reserved 1;
  reserved "cache_size";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message ExecutableSchema {
  reserved 1, 2, 3;
  reserved "schema_definition", "executor", "grpc_descriptor_registry";
}

// DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
message Executor {
  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message Local {
    // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
    message LocalExecutorOptions {
      reserved 1;
      reserved "max_depth";
    }

    reserved 1, 2, 3;
    reserved "resolutions", "enable_introspection", "options";
  }
  // DEPRECATED: This message is deprecated and has been removed from use as of gloo 1.20. Message is being kept to prevent future use of these names and fields
  message Remote {
    reserved 1, 2, 3, 4;
    reserved "upstream_ref", "headers", "query_params", "span_name";
  }
  reserved 1, 2;
  reserved "local", "remote";
}
